Refactors button styles and section uncovering
Button styles are exclusively in the CSS
Section only reveals next and leaves read text alone

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main>
-    <section id="active">
+    <section class="read">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec ex eget quam sagittis viverra vel sit amet lorem. Nulla ultrices metus at nunc tincidunt, at hendrerit tortor lacinia. Morbi in tincidunt turpis. Praesent id venenatis est. Nullam vehicula, erat sit amet consequat elementum, elit nisi iaculis neque, eu ornare erat sem sit amet tortor. Nullam imperdiet volutpat elit, a volutpat sem pretium ut. Sed gravida magna id ornare consequat. Morbi at egestas dolor. Quisque tristique urna in egestas maximus. Maecenas maximus iaculis lectus, nec pulvinar dolor cursus scelerisque. Quisque et eros ac ante accumsan porta in ut odio. Nulla tortor augue, condimentum non augue et, hendrerit volutpat lectus.
       </p>
