--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,24 +8,44 @@
   <title>Interactive Lesson</title>
   <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
   <main>
     <section class="read">
+      <h1>CSS Selectors</h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec ex eget quam sagittis viverra vel sit amet lorem. Nulla ultrices metus at nunc tincidunt, at hendrerit tortor lacinia. Morbi in tincidunt turpis. Praesent id venenatis est. Nullam vehicula, erat sit amet consequat elementum, elit nisi iaculis neque, eu ornare erat sem sit amet tortor. Nullam imperdiet volutpat elit, a volutpat sem pretium ut. Sed gravida magna id ornare consequat. Morbi at egestas dolor. Quisque tristique urna in egestas maximus. Maecenas maximus iaculis lectus, nec pulvinar dolor cursus scelerisque. Quisque et eros ac ante accumsan porta in ut odio. Nulla tortor augue, condimentum non augue et, hendrerit volutpat lectus.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec ex eget quam sagittis viverra vel sit
+        amet lorem. Nulla ultrices metus at nunc tincidunt, at hendrerit tortor lacinia. Morbi in tincidunt turpis.
+        Praesent id venenatis est. Nullam vehicula, erat sit amet consequat elementum, elit nisi iaculis neque, eu
+        ornare erat sem sit amet tortor. Nullam imperdiet volutpat elit, a volutpat sem pretium ut. Sed gravida magna id
+        ornare consequat. Morbi at egestas dolor. Quisque tristique urna in egestas maximus. Maecenas maximus iaculis
+        lectus, nec pulvinar dolor cursus scelerisque. Quisque et eros ac ante accumsan porta in ut odio. Nulla tortor
+        augue, condimentum non augue et, hendrerit volutpat lectus.
       </p>
     </section>
     <section>
       <p>
-        Maecenas iaculis nibh in elit blandit ultricies. Nunc scelerisque turpis augue, eget commodo velit bibendum eget. Pellentesque rutrum metus lorem, vel volutpat eros lacinia at. Proin odio eros, eleifend ultricies porta a, maximus id orci. In mauris diam, auctor at porta sed, molestie et risus. Nulla tempor mollis consectetur. Etiam in dolor nec lacus pulvinar tristique. Integer egestas dolor dictum tempus mollis. Pellentesque elementum turpis urna, fringilla maximus ante faucibus sit amet. Donec luctus consequat suscipit. Phasellus eleifend gravida lorem et accumsan. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis vitae sodales lorem, et tempor lectus. Morbi commodo bibendum nisl vitae consequat.
+        Maecenas iaculis nibh in elit blandit ultricies. Nunc scelerisque turpis augue, eget commodo velit bibendum
+        eget. Pellentesque rutrum metus lorem, vel volutpat eros lacinia at. Proin odio eros, eleifend ultricies porta
+        a, maximus id orci. In mauris diam, auctor at porta sed, molestie et risus. Nulla tempor mollis consectetur.
+        Etiam in dolor nec lacus pulvinar tristique. Integer egestas dolor dictum tempus mollis. Pellentesque elementum
+        turpis urna, fringilla maximus ante faucibus sit amet. Donec luctus consequat suscipit. Phasellus eleifend
+        gravida lorem et accumsan. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+        mus. Duis vitae sodales lorem, et tempor lectus. Morbi commodo bibendum nisl vitae consequat.
       </p>
     </section>
     <section>
-    <p>
-      Nulla efficitur nulla ut auctor viverra. Nunc vel augue non lorem varius sagittis sit amet eu dui. Donec eu tempor est. Sed id ex in lacus tristique rutrum fermentum et urna. Maecenas at varius ipsum. Nunc venenatis nisl purus, id aliquet nibh sodales nec. Integer ut nulla vel ipsum bibendum sollicitudin. In hac habitasse platea dictumst. In hac habitasse platea dictumst. Ut vitae risus sed enim consequat vulputate ac malesuada erat. Vivamus imperdiet eget dui ac blandit. Fusce molestie bibendum libero eu placerat. Phasellus ac turpis quis diam lacinia dictum vitae non nunc.
-    </p>
+      <p>
+        Nulla efficitur nulla ut auctor viverra. Nunc vel augue non lorem varius sagittis sit amet eu dui. Donec eu
+        tempor est. Sed id ex in lacus tristique rutrum fermentum et urna. Maecenas at varius ipsum. Nunc venenatis nisl
+        purus, id aliquet nibh sodales nec. Integer ut nulla vel ipsum bibendum sollicitudin. In hac habitasse platea
+        dictumst. In hac habitasse platea dictumst. Ut vitae risus sed enim consequat vulputate ac malesuada erat.
+        Vivamus imperdiet eget dui ac blandit. Fusce molestie bibendum libero eu placerat. Phasellus ac turpis quis diam
+        lacinia dictum vitae non nunc.
+      </p>
     </section>
   </main>
   <script src="./index.js"></script>
 </body>
+
 </html>
