minor content and style changes

--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
   <main>
     <section class="read">
       <h1>CSS Selectors</h1>
+    </section>
+    <section>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec ex eget quam sagittis viverra vel sit
-        amet lorem. Nulla ultrices metus at nunc tincidunt, at hendrerit tortor lacinia. Morbi in tincidunt turpis.
-        Praesent id venenatis est. Nullam vehicula, erat sit amet consequat elementum, elit nisi iaculis neque, eu
-        ornare erat sem sit amet tortor. Nullam imperdiet volutpat elit, a volutpat sem pretium ut. Sed gravida magna id
-        ornare consequat. Morbi at egestas dolor. Quisque tristique urna in egestas maximus. Maecenas maximus iaculis
-        lectus, nec pulvinar dolor cursus scelerisque. Quisque et eros ac ante accumsan porta in ut odio. Nulla tortor
-        augue, condimentum non augue et, hendrerit volutpat lectus.
+        We've learned that HTML is for content and CSS is for style. But how do we decide which HTML elements we are
+        going to style?
       </p>
     </section>
     <section>
