--- a/index.html
+++ b/index.html
@@ -16,29 +16,58 @@
     </section>
     <section>
       <p>
-        We've learned that HTML is for content and CSS is for style. But how do we decide which HTML elements we are
-        going to style?
+        We've learned that HTML is for content and CSS is for style. </p>
+    </section>
+    <section>
+      <p>
+        But which HTML elements we are going to style?
+      </p>
+      <p>
+        We need a way to <strong>select</strong> elements. In CSS, we select elements with <strong>selectors</strong>.
       </p>
     </section>
     <section>
       <p>
-        Maecenas iaculis nibh in elit blandit ultricies. Nunc scelerisque turpis augue, eget commodo velit bibendum
-        eget. Pellentesque rutrum metus lorem, vel volutpat eros lacinia at. Proin odio eros, eleifend ultricies porta
-        a, maximus id orci. In mauris diam, auctor at porta sed, molestie et risus. Nulla tempor mollis consectetur.
-        Etiam in dolor nec lacus pulvinar tristique. Integer egestas dolor dictum tempus mollis. Pellentesque elementum
-        turpis urna, fringilla maximus ante faucibus sit amet. Donec luctus consequat suscipit. Phasellus eleifend
-        gravida lorem et accumsan. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-        mus. Duis vitae sodales lorem, et tempor lectus. Morbi commodo bibendum nisl vitae consequat.
+        Let's see some examples of selectors in action.
       </p>
     </section>
     <section>
+      <table>
+        <th>Some selectors</th>
+        <tr>
+          <td><code>body</code></td>
+        </tr>
+        <tr>
+          <td><code>div</code></td>
+        </tr>
+        <tr>
+          <td><code>button.primary</code></td>
+        </tr>
+        <tr>
+          <td><code>#submit</code></td>
+        </tr>
+        <tr>
+          <td><code>h1, h2, h3, h4</code></td>
+        </tr>
+        </tr>
+      </table>
+      <br />
+    </section>
+    <section>
       <p>
-        Nulla efficitur nulla ut auctor viverra. Nunc vel augue non lorem varius sagittis sit amet eu dui. Donec eu
-        tempor est. Sed id ex in lacus tristique rutrum fermentum et urna. Maecenas at varius ipsum. Nunc venenatis nisl
-        purus, id aliquet nibh sodales nec. Integer ut nulla vel ipsum bibendum sollicitudin. In hac habitasse platea
-        dictumst. In hac habitasse platea dictumst. Ut vitae risus sed enim consequat vulputate ac malesuada erat.
-        Vivamus imperdiet eget dui ac blandit. Fusce molestie bibendum libero eu placerat. Phasellus ac turpis quis diam
-        lacinia dictum vitae non nunc.
+        Selectors select HTML elements. Which elements are selected depends on the selector. Let's start with the basic
+        rules.
+      </p>
+      <p>
+        Selectors like <code>body</code> or <code>div</code> select <strong>all the elements of that type</strong>.
+      </p>
+    </section>
+    <section class="interactive-text" data-answer="a">
+      <p>How would you select all the links?</p>
+      <p>
+        <em>
+          Reminder: links look like <code>&lt;a href="www.google.com"&gt;</code>
+        </em>
       </p>
     </section>
   </main>
