finishing up interactions

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         </em>
       </p>
     </section>
+    <section>
+      <p>Nice!</p>
+    </section>
   </main>
   <script src="./index.js"></script>
 </body>
